# Housing_Utilities

./: .env.sample  .gitignore  README.md  pyproject.toml
billing/: models.py  serializers.py  servises.py  tasks.py  urls.py  views.py
billing/fixtures/: tariff_data.json
billing/migrations/: 0001_initial.py
config/: settings.py  urls.py
housing/: models.py  serializers.py  urls.py  views.py
housing/fixtures/: apartments.json  houses.json
housing/migrations/: 0001_initial.py  0002_alter_apartment_options_alter_house_options_and_more.py  0003_alter_house_unique_together.py  0004_alter_apartment_options_alter_house_options.py  0005_apartment_monthly_payment.py
metering/: apps.py  models.py  serializers.py  urls.py  views.py
metering/fixtures/: water_meter.json
metering/migrations/: 0001_initial.py  0002_alter_watermeter_options_alter_watermeter_apartment.py
